se realizo la pagina de quienes somo y se enlazo el boton productos

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 									<div>Inicio</div>
 								</a>
 							</li>
-							<li class="current"><a href="index.html">
+							<li class="current"><a href="nosotros.html">
 								<div>Quienes somos</div>
 							</a>
 							<li class="current"><a href="#productos">
