--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
 							<li class="current"><a href="#productos">
 								<div>Productos</div>
 							</a>
-							<li class="current"><a href="index.html">
+							<li class="current"><a href="#contactos">
 								<div>Contactenos</div>
 							</a>
 						</li>
