actualizacion de informacion de productos, nosotros

--- a/public/locker-pin-establecido.html
+++ b/public/locker-pin-establecido.html
@@ -28,7 +28,7 @@
 
     <!-- Document Title
     ============================================= -->
-	<title>Shop Single | Canvas</title>
+	<title>Código PIN autoestablecido o contraseña</title>
 
 </head>
 
@@ -92,7 +92,7 @@
         <section id="page-title">
 
             <div class="container clearfix">
-                <h1>Locker inteligente con código PIN autoestablecido</h1>
+                <h1>Código PIN autoestablecido o contraseña</h1>
             </div>
 
         </section><!-- #page-title end -->
@@ -131,7 +131,7 @@
 
                                 <!-- Product Single - Short Description
                                 ============================================= -->
-                                <p>El bloqueador de contraseñas autoconfigurable almacena paquetes y abre casilleros a través de contraseñas preestablecidas por los usuarios, se puede utilizar con sistemas de pago y recaudo.</p>
+                                <p>El bloqueador de contraseñas autoconfigurable almacena paquetes y abre casilleros a través de contraseñas preestablecidas por los usuarios, se puede utilizar con sistemas de pago o recaudo.</p>
                                 <ul class="iconlist">
                                     <li><i class="icon-caret-right"></i> Colores dinaicos</li>
                                     <li><i class="icon-caret-right"></i> Variedad de tamaños</li>
@@ -165,37 +165,31 @@
                                             <p>Recoger: presione el botón "Recuperar" ----- ingrese la contraseña ---- la caja abierta, recupere el artículo.</p>
                                         </div>
                                         <div class="tab-content clearfix" id="tabs-2">
-
+                                            <h1>Fabricamos según tamaños requeridos y espacios a utilizar.
+                                            </h1>
                                             <table class="table table-striped table-bordered">
                                                 <tbody>
                                                     <tr>
-                                                        <td>Size</td>
-                                                        <td>Small, Medium &amp; Large</td>
+                                                        <td>Especificaciones</td>
+                                                        <td>Medidas Generales</td>
+                                                        <td>Medida de cada Espacio</td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Color</td>
-                                                        <td>Pink &amp; White</td>
+                                                        <td>8 Espacios</td>
+                                                        <td>180cm alto*90cm ancho*40cm fondo</td>
+                                                        <td>45cm alto*45cm ancho*40cm fondo</td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Waist</td>
-                                                        <td>26 cm</td>
+                                                        <td>9 Espacios</td>
+                                                        <td>180cm alto*124cm ancho*40cm fondo</td>
+                                                        <td>190cm alto*120cm ancho*40cm fondo</td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Length</td>
-                                                        <td>40 cm</td>
+                                                        <td>12 Espacios</td>
+                                                        <td>55cm alto*40cm ancho*40cm fondo.</td>
+                                                        <td>42.5cm alto*36cm ancho*40cm fondo</td>
                                                     </tr>
-                                                    <tr>
-                                                        <td>Chest</td>
-                                                        <td>33 inches</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Fabric</td>
-                                                        <td>Cotton, Silk &amp; Synthetic</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Warranty</td>
-                                                        <td>3 Months</td>
-                                                    </tr>
+                                                    
                                                 </tbody>
                                             </table>
 
