--- a/public/locker-tarjeta-inteligente.html
+++ b/public/locker-tarjeta-inteligente.html
@@ -28,7 +28,7 @@
 
     <!-- Document Title
     ============================================= -->
-	<title>Shop Single | Canvas</title>
+	<title>Tarjeta inteligente</title>
 
 </head>
 
@@ -92,7 +92,7 @@
         <section id="page-title">
 
             <div class="container clearfix">
-                <h1>Locker de tarjeta inteligente</h1>
+                <h1>Tarjeta inteligente</h1>
             </div>
 
         </section><!-- #page-title end -->
@@ -117,9 +117,9 @@
                                     <div class="fslider" data-pagi="false" data-arrows="false" data-thumbs="true">
                                         <div class="flexslider">
                                             <div class="slider-wrap" data-lightbox="gallery">
-                                                <div class="slide" data-thumb="images/lockers/1.png"><a href="images/lockers/1.png" title="Locker código de barras" data-lightbox="gallery-item"><img src="images/lockers/1.png" alt="Locker codigo de barras"></a></div>
-                                                <div class="slide" data-thumb="images/lockers/1.png"><a href="images/lockers/1.png" title="Pink Printed Dress - Side View" data-lightbox="gallery-item"><img src="images/lockers/1.png" alt="Pink Printed Dress"></a></div>
-                                                <div class="slide" data-thumb="images/lockers/1.png"><a href="images/lockers/1.png" title="Pink Printed Dress - Back View" data-lightbox="gallery-item"><img src="images/lockers/1.png" alt="Pink Printed Dress"></a></div>
+                                                <div class="slide" data-thumb="images/lockers/5.png"><a href="images/lockers/5.png" title="Tarjeta inteligente" data-lightbox="gallery-item"><img src="images/lockers/5.png" alt="Locker codigo de barras"></a></div>
+                                                <div class="slide" data-thumb="images/lockers/5.png"><a href="images/lockers/5.png" title="Tarjeta inteligente" data-lightbox="gallery-item"><img src="images/lockers/5.png" alt="Pink Printed Dress"></a></div>
+                                                <div class="slide" data-thumb="images/lockers/5.png"><a href="images/lockers/5.png" title="Tarjeta inteligente" data-lightbox="gallery-item"><img src="images/lockers/5.png" alt="Pink Printed Dress"></a></div>
                                             </div>
                                         </div>
                                     </div>
