--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -92,8 +92,9 @@
         <section id="page-title" class="page-title-parallax page-title-dark page-title-right" style="padding: 250px 0; background-image: url('./images/background banner.png'); background-size: cover; background-position: center center;" data-stellar-background-ratio="0.2">
 
             <div class="container clearfix">
-                <h1>Quienes somos</h1>
-                <span>Lockercol</span>
+                <h1>Que hacemos</h1>
+                <span>Somos una empresa 100% Colombiana fundada en el año 2016, dedicada a ofrecer el servicio de casilleros autónomos inteligentes de uso temporal, brindando el máximo nivel de seguridad con varios métodos de autenticación, que incluyen código de barras, biométrico, tarjeta, contraseña, cerraduras electronicas digitales y recaudadores de monedas. 
+				</span>
             </div>
 
         </section><!-- #page-title end -->
@@ -102,14 +103,7 @@
         ============================================= -->
         <section id="content">
 
-                <div class="section nobottommargin">
-                    <div class="container clearfix">
-                        <div class="heading-block center nobottommargin nobottomborder">
-                            <h3>Qué hacemos</h3>
-                            <span>Somos una empresa 100% Colombiana fundada en el año 2016, dedicada a ofrecer el servicio de casilleros inteligentes metálicos/carpintería con diferentes alternativas de cierre/apertura.</span>
-                        </div>
-                    </div>
-                </div>
+
 
                 <div class="instagram-photos masonry-thumbs col-6 bottommargin-lg" data-user="insideenvato" data-count="12" data-type="user"></div>
 
