--- a/public/locker-Cerradura-digital.html
+++ b/public/locker-Cerradura-digital.html
@@ -92,7 +92,7 @@
         <section id="page-title">
 
             <div class="container clearfix">
-                <h1>Locker de pago inteligente</h1>
+                <h1>Locker inteligente de código de barras</h1>
             </div>
 
         </section><!-- #page-title end -->
@@ -131,7 +131,8 @@
 
                                 <!-- Product Single - Short Description
                                 ============================================= -->
-                                <p>Casillero de pago (casillero inteligente de billetes / efectivo; casillero inteligente de moneda; casillero inteligente de deslizamiento de tarjeta (tarjeta bancaria o tarjeta de crédito))</p>
+                                <p>El bloqueador de códigos de barras está estructurado principalmente por componentes de control inteligente, lector de códigos de barras y proporciona a los usuarios un ticket con código de barras impreso para recuperar artículos.</p>
+                                <p>Perspiciatis ad eveniet ea quasi debitis quos laborum eum reprehenderit eaque explicabo assumenda rem modi.</p>
                                 <ul class="iconlist">
                                     <li><i class="icon-caret-right"></i> Colores dinaicos</li>
                                     <li><i class="icon-caret-right"></i> Variedad de tamaños</li>
@@ -159,14 +160,9 @@
                                     <div class="tab-container">
 
                                         <div class="tab-content clearfix" id="tabs-1">
-                                            <p>El casillero electrónico de pago adopta el procesador integrado, equipado con pantalla táctil grande, módulo externo de escaneo de códigos de barras de alta precisión, aceptador de monedas, cambiador de monedas, lector de tarjetas RFID, impresora y otro dispositivo de hardware, es un dispositivo multi -un dispositivo terminal inteligente funcional que integra al usuario almacenando y sacando artículos; Configuración de administrador, actualización, mantenimiento y alarmas de seguridad.</p>
-                                            <h4>Funciones</h4>
-                                            <p>Esta cerradura se puede programar para trabajar en modo público o modo privado y permite combinaciones de código entre 4 y 16 dígitos. </p>
-                                            <h4>Modo público</h4>
-                                            <p>Por cada apertura y cierre se debe asignar código.</p>
-                                            <h4>Modo privado</h4>
-                                            <p>se debe asignar una única clave para realizar apertura.</p>
-                                            <p>Es importante recordar que esta chapa se puede configurar para su funcionamiento ya sea en modo PRIVADO o en modo PÚBLICO, es decir, permite alternar entre ambos modos.</p>
+                                            <p>El bloqueador de códigos de barras está estructurado principalmente por componentes de control inteligente, lector de códigos de barras y proporciona a los usuarios un ticket con código de barras impreso para recuperar artículos.</p>
+                                            <p>Nuestros casilleros de uso temporal brindan el máximo nivel de seguridad con varios métodos de autenticación, que incluyen código de barras, biométrico, tarjeta IC, contraseña configurada por usted mismo y más.</p>
+                                            <p>Estos casilleros se encuentran en áreas recreativas, parques de atracciones y entornos corporativos, solo por nombrar algunos.</p>
                                         </div>
                                         <div class="tab-content clearfix" id="tabs-2">
 
