feat: ajustes textos en ingles

--- a/public/index.html
+++ b/public/index.html
@@ -211,10 +211,8 @@
 
 				<div class="promo promo-light promo-full bottommargin-lg header-stick notopborder">
 					<div class="container clearfix">
-						<h3>Contactanos <span>+57 318 3819166</span> o Email <span>support@canvas.com</span>
+						<h3>Contáctanos <span>+57 318 3819166</span> o Email <span>smartlockercolombia@gmail.com</span>
 						</h3>
-						<span>We strive to provide Our Customers with Top Notch Support to make their Theme Experience
-							Wonderful</span>
 						<a href="#productos" class="button button-dark button-xlarge button-rounded">Ver Productos</a>
 					</div>
 				</div>
@@ -226,7 +224,7 @@
 							<div class="fbox-icon">
 								<a href="#"><i class="i-alt noborder icon-shield"></i></a>
 							</div>
-							<h3>Alta seguridad<span class="subtitle">Start your Own Shop today</span></h3>
+							<h3>Alta seguridad</h3>
 						</div>
 					</div>
 
@@ -235,7 +233,7 @@
 							<div class="fbox-icon">
 								<a href="#"><i class="i-alt noborder icon-dashboard"></i></a>
 							</div>
-							<h3>Excelente tiempo de respuesta<span class="subtitle">Credit Cards &amp; PayPal Support</span></h3>
+							<h3>Excelente tiempo de respuesta</h3>
 						</div>
 					</div>
 
@@ -244,7 +242,7 @@
 							<div class="fbox-icon">
 								<a href="#"><i class="i-alt noborder icon-megaphone"></i></a>
 							</div>
-							<h3>Función de aviso de voz<span class="subtitle">Realtime Email &amp; SMS Support</span></h3>
+							<h3>Función de aviso de voz</h3>
 						</div>
 					</div>
 
@@ -253,7 +251,7 @@
 							<div class="fbox-icon">
 								<a href="#"><i class="i-alt noborder icon-ok-sign"></i></a>
 							</div>
-							<h3>Productos de calidad<span class="subtitle">Realtime Email &amp; SMS Support</span></h3>
+							<h3>Productos de calidad</h3>
 						</div>
 					</div>
 
@@ -306,8 +304,6 @@
 									<a href="#"><i class="icon-heart"></i></a>
 								</div>
 								<h3>GIMNASIOS </h3>
-								<p>t with Responsive functionality that can be adapted to any screen size.
-								</p>
 							</div>
 						</div>
 
@@ -317,8 +313,6 @@
 									<a href="#"><i class="icon-plus-sign2"></i></a>
 								</div>
 								<h3>HOSPITALES/CLINICAS</h3>
-								<p>Looks beautiful &amp; ultra-sharp on Retina Displays with Retina Icons, Fonts &amp;
-									Images.</p>
 							</div>
 						</div>
 
@@ -328,8 +322,6 @@
 									<a href="#"><i class="icon-tint"></i></a>
 								</div>
 								<h3>BALNEARIOS</h3>
-								<p>Optimized code that are completely customizable and deliver unmatched fast
-									performance.</p>
 							</div>
 						</div>
 
@@ -341,8 +333,6 @@
 									<a href="#"><i class="icon-car"></i></a>
 								</div>
 								<h3>PARQUEADEROS</h3>
-								<p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width
-									Background.</p>
 							</div>
 						</div>
 
@@ -352,8 +342,6 @@
 									<a href="#"><i class="icon-book"></i></a>
 								</div>
 								<h3>COLEGIOS</h3>
-								<p>Display your Content attractively using Parallax Sections that have unlimited
-									customizable areas.</p>
 							</div>
 						</div>
 
@@ -363,8 +351,6 @@
 									<a href="#"><i class="icon-university"></i></a>
 								</div>
 								<h3>UNIVERSIDADES</h3>
-								<p>Complete control on each &amp; every element that provides endless customization
-									possibilities.</p>
 							</div>
 						</div>
 
@@ -575,7 +561,7 @@
 
 							<div class="widget clearfix">
 
-								<img src="images/footer-widget-logo.png" alt="" class="footer-logo">
+								<img width="200" src="images/lockercol-logo-blanco.png" alt="" class="footer-logo">
 
 								<p>We believe in <strong>Simple</strong>, <strong>Creative</strong> &amp;
 									<strong>Flexible</strong> Design Standards.</p>
