--- a/public-en/nosotros.html
+++ b/public-en/nosotros.html
@@ -57,7 +57,7 @@
                     <!-- Logo
 					============================================= -->
                     <div id="logo">
-                        <a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="./images/logo.png" alt="Canvas Logo"></a>
+                        <a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="images/logo.png" alt="Canvas Logo"></a>
                         <a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/logo@2x.png" alt="lockercol Logo"></a>
                     </div>
                     <!-- #logo end -->
@@ -69,20 +69,20 @@
                         <ul>
                             <li class="current">
                                 <a href="index.html">
-                                    <div>Inicio</div>
+                                    <div>home</div>
                                 </a>
                             </li>
                             <li class="current">
-                                <a href="nosotros.html">
-                                    <div>Quienes somos</div>
+                                <a href="index.html">
+                                    <div>About Us</div>
                                 </a>
                                 <li class="current">
                                     <a href="index.html#productos">
-                                        <div>Productos</div>
+                                        <div>Products</div>
                                     </a>
                                     <li class="current">
-                                        <a href="#contactos">
-                                            <div>Contactenos</div>
+                                        <a href="index.html">
+                                            <div>Contact us</div>
                                         </a>
                                     </li>
                                 </li>
@@ -104,8 +104,8 @@
         <section id="page-title" class="page-title-parallax page-title-dark page-title-right" style="padding: 250px 0; background-image: url('./images/background banner.png'); background-size: cover; background-position: center center;" data-stellar-background-ratio="0.2">
 
             <div class="container clearfix">
-                <h1>Que hacemos</h1>
-                <span>Somos una empresa 100% Colombiana fundada en el año 2016, dedicada a ofrecer el servicio de casilleros autónomos inteligentes de uso temporal, brindando el máximo nivel de seguridad con varios métodos de autenticación, que incluyen código de barras, biométrico, tarjeta, contraseña, cerraduras electronicas digitales y recaudadores de monedas. 
+                <h1>What do we do?</h1>
+                <span>We are a 100% Colombian company founded in 2016, dedicated to offering the service of intelligent autonomous lockers for temporary use, providing the highest level of security with various authentication methods, including barcode, biometric, card, password, locks digital electronics and coin collectors.
 				</span>
             </div>
 
@@ -123,8 +123,8 @@
             <div class="container clearfix">
 
                 <div class="heading-block center">
-                    <h3>Locker inteligente de huellas dactilares</h3>
-                    <span>El bloqueador de huellas digitales está estructurado principalmente por componentes de control inteligente, componentes biométricos, etc. Al recopilar los datos biométricos del usuario, el sistema puede verificar la identificación del usuario y el proceso de recuperación con huellas digitales.</span>
+                    <h3>Smart fingerprint locker</h3>
+                    <span>The fingerprint blocker is mainly structured by intelligent control components, biometric components, etc. By collecting the user's biometric data, the system can verify the user's identification and fingerprint recovery process.</span>
                 </div>
 
             </div>
@@ -141,7 +141,7 @@
             <div class="container">
 
                 <!-- Footer Widgets
-					============================================= -->
+                    ============================================= -->
                 <div class="footer-widgets-wrap clearfix">
 
                     <div class="col_one_third">
@@ -154,10 +154,10 @@
 
                                 <div style="background: url('images/world-map.png') no-repeat center center; background-size: 100%;">
                                     <address>
-											<strong>Ciudad:</strong><br>
-											Manizales, Caldas<br>
-										</address>
-                                    <abbr title="Phone Number"><strong>Celular:</strong></abbr> +57 318 381 91 66<br>
+                                            <strong>City:</strong><br>
+                                            Manizales, Caldas<br>
+                                        </address>
+                                    <abbr title="Phone Number"><strong>Cell Phone Number:</strong></abbr> +57 318 381 91 66<br>
                                     <abbr title="Email Address"><strong>Email:</strong></abbr> smartlockercolombia@gmail.com
                                 </div>
 
@@ -172,33 +172,33 @@
                     <div class="col_two_third col_last" id="contactos">
 
                         <div class="widget subscribe-widget clearfix">
-                            <h5><strong>Contáctenos: </strong></h5>
+                            <h5><strong>Contact Us: </strong></h5>
                             <div id="widget-subscribe-form-result" data-notify-type="success" data-notify-msg=""></div>
                             <form id="widget-subscribe-form" action="include/subscribe.php" role="form" method="post" class="nobottommargin">
                                 <div class="input-group divcenter">
                                     <span class="input-group-addon"><i class="icon-line-loader"></i></span>
-                                    <input type="text" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required " placeholder="Nombre">
+                                    <input type="text" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required " placeholder="first Name">
 
                                     <span class="input-group-addon"><i class=""></i></span>
-                                    <input type="text" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required " placeholder="Apellido">
+                                    <input type="text" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required " placeholder="Last Name">
                                 </div>
                                 <br>
                                 <div class="input-group divcenter">
                                     <span class="input-group-addon"><i class="icon-line-loader"></i></span>
-                                    <textarea id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required " placeholder="Solicitud"></textarea>
+                                    <textarea id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required " placeholder="Request"></textarea>
                                 </div>
                                 <br>
                                 <div class="input-group divcenter">
                                     <span class="input-group-addon"><i class="icon-line-loader"></i></span>
-                                    <input type="text" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required " placeholder="Celular">
+                                    <input type="text" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required " placeholder="Cell Phone Number">
                                 </div>
                                 <br>
                                 <div class="input-group divcenter">
                                     <span class="input-group-addon"><i class="icon-email2"></i></span>
-                                    <input type="email" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required email" placeholder="Correo Electronico">
+                                    <input type="email" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required email" placeholder="Email">
                                     <span class="input-group-btn">
-											<button class="btn btn-success" type="submit">Enviar</button>
-										</span>
+                                            <button class="btn btn-success" type="submit">Send</button>
+                                        </span>
                                 </div>
                             </form>
                             <script type="text/javascript">
@@ -224,14 +224,14 @@
                             <div class="row">
 
                                 <!-- <div class="col-md-12 clearfix bottommargin-sm">
-										<a href="#" class="social-icon si-dark si-colored si-facebook nobottommargin"
-											style="margin-right: 10px;">
-											<i class="icon-facebook"></i>
-											<i class="icon-facebook"></i>
-										</a>
-										<a href="#"><small style="display: block; margin-top: 3px;"><strong>Like
-													us</strong><br>on Facebook</small></a>
-									</div> -->
+                                        <a href="#" class="social-icon si-dark si-colored si-facebook nobottommargin"
+                                            style="margin-right: 10px;">
+                                            <i class="icon-facebook"></i>
+                                            <i class="icon-facebook"></i>
+                                        </a>
+                                        <a href="#"><small style="display: block; margin-top: 3px;"><strong>Like
+                                                    us</strong><br>on Facebook</small></a>
+                                    </div> -->
 
 
                             </div>
@@ -246,27 +246,27 @@
             </div>
 
             <!-- Copyrights
-				============================================= -->
+                ============================================= -->
             <div id="copyrights">
 
                 <div class="container clearfix">
 
                     <div class="col_half">
-                        Copyrights &copy; 2019 Todos los derechos reservados por Lockercol<br>
+                        Copyrights &copy; 2019 All rights reserved by Lockercol<br>
                     </div>
 
                     <div class="col_half col_last tright">
                         <div class="fright clearfix">
                             <!-- <a href="#" class="social-icon si-small si-borderless si-facebook">
-									<i class="icon-facebook"></i>
-									<i class="icon-facebook"></i>
-								</a>
-	
-								<a href="#" class="social-icon si-small si-borderless si-twitter">
-									<i class="icon-twitter"></i>
-									<i class="icon-twitter"></i>
-								</a>
-								 -->
+                                    <i class="icon-facebook"></i>
+                                    <i class="icon-facebook"></i>
+                                </a>
+    
+                                <a href="#" class="social-icon si-small si-borderless si-twitter">
+                                    <i class="icon-twitter"></i>
+                                    <i class="icon-twitter"></i>
+                                </a>
+                                 -->
 
 
                             <div class="clear"></div>
