--- a/public/index.html
+++ b/public/index.html
@@ -610,28 +610,28 @@
                         <div class="widget subscribe-widget clearfix">
                             <h5><strong>Contáctenos: </strong></h5>
                             <div id="widget-subscribe-form-result" data-notify-type="success" data-notify-msg=""></div>
-                            <form id="widget-subscribe-form" action="include/subscribe.php" role="form" method="post" class="nobottommargin">
+                            <form id="widget-subscribe-form" action="https://formspree.io/xrgzyenk" method="POST" class="nobottommargin">
                                 <div class="input-group divcenter">
                                     <span class="input-group-addon"><i class="icon-line-loader"></i></span>
-                                    <input type="text" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required " placeholder="Nombre">
+                                    <input type="text" name="nombre" class="form-control required " placeholder="Nombre">
 
                                     <span class="input-group-addon"><i class=""></i></span>
-                                    <input type="text" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required " placeholder="Apellido">
+                                    <input type="text" name="apellidos" class="form-control required " placeholder="Apellido">
                                 </div>
                                 <br>
                                 <div class="input-group divcenter">
                                     <span class="input-group-addon"><i class="icon-line-loader"></i></span>
-                                    <textarea id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required " placeholder="Solicitud"></textarea>
+                                    <textarea name="solicitud" class="form-control required " placeholder="Solicitud"></textarea>
                                 </div>
                                 <br>
                                 <div class="input-group divcenter">
                                     <span class="input-group-addon"><i class="icon-line-loader"></i></span>
-                                    <input type="text" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required " placeholder="Celular">
+                                    <input type="number" name="celular" class="form-control required " placeholder="Celular">
                                 </div>
                                 <br>
                                 <div class="input-group divcenter">
                                     <span class="input-group-addon"><i class="icon-email2"></i></span>
-                                    <input type="email" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required email" placeholder="Correo Electronico">
+                                    <input type="email" name="email" class="form-control required email" placeholder="Email">
                                     <span class="input-group-btn">
 										<button class="btn btn-success" type="submit">Enviar</button>
 									</span>
