--- a/public/locker-Cerradura-digital.html
+++ b/public/locker-Cerradura-digital.html
@@ -159,8 +159,7 @@
                                     de instalación (muy sencilla) y manual de usuario. Cuerpo de bloqueo - Tipo retráctil - Material: Aleación de cinc y Acero laminado en frío - Tratamiento superficie: cromado mate
                                 </p>
                                 <ul class="iconlist">
-                                    <li><i class="icon-caret-right"></i> Colores dinaicos</li>
-                                    <li><i class="icon-caret-right"></i> Variedad de tamaños</li>
+                                    <li><i class="icon-caret-right"></i> Variedad de tamaños y colores</li>
                                 </ul>
                                 <!-- Product Single - Short Description End -->
 
