add icons change language

--- a/public/index.html
+++ b/public/index.html
@@ -76,16 +76,22 @@
                                 <a href="nosotros.html">
                                     <div>Quienes somos</div>
                                 </a>
-                                <li class="current">
-                                    <a href="#productos">
-                                        <div>Productos</div>
-                                    </a>
-                                    <li class="current">
-                                        <a href="#contactos">
-                                            <div>Contactenos</div>
-                                        </a>
-                                    </li>
-                                </li>
+                            </li>
+                            <li class="current">
+                                <a href="#productos">
+                                    <div>Productos</div>
+                                </a>
+                            </li>
+                            <li class="current">
+                                <a href="#contactos">
+                                    <div>Contactenos</div>
+                                </a>
+                            </li>
+                            <li class="current">
+                                <a href="./en/index.html">
+                                    <img src="./images/language/EN.jpeg" class="language" />
+                                </a>
+                            </li>
                         </ul>
 
                     </nav>
