--- a/public/en/index.html
+++ b/public/en/index.html
@@ -69,23 +69,29 @@
                         <ul>
                             <li class="current">
                                 <a href="index.html">
-                                    <div>Home</div>
+                                    <div>Inicio</div>
                                 </a>
                             </li>
                             <li class="current">
                                 <a href="nosotros.html">
-                                    <div>About us</div>
+                                    <div>Quienes somos</div>
                                 </a>
-                                <li class="current">
-                                    <a href="#productos">
-                                        <div>Products</div>
-                                    </a>
-                                    <li class="current">
-                                        <a href="#contactos">
-                                            <div>Contact</div>
-                                        </a>
-                                    </li>
-                                </li>
+                            </li>
+                            <li class="current">
+                                <a href="#productos">
+                                    <div>Productos</div>
+                                </a>
+                            </li>
+                            <li class="current">
+                                <a href="#contactos">
+                                    <div>Contactenos</div>
+                                </a>
+                            </li>
+                            <li class="current">
+                                <a href="../index.html">
+                                    <img src="../images/language/ES.png" class="language" />
+                                </a>
+                            </li>
                         </ul>
 
                     </nav>
