--- a/public/en/nosotros.html
+++ b/public/en/nosotros.html
@@ -69,24 +69,31 @@
                         <ul>
                             <li class="current">
                                 <a href="index.html">
-                                    <div>home</div>
+                                    <div>Inicio</div>
                                 </a>
                             </li>
                             <li class="current">
-                                <a href="index.html">
-                                    <div>About Us</div>
+                                <a href="nosotros.html">
+                                    <div>Quienes somos</div>
                                 </a>
-                                <li class="current">
-                                    <a href="index.html#productos">
-                                        <div>Products</div>
-                                    </a>
-                                    <li class="current">
-                                        <a href="index.html">
-                                            <div>Contact us</div>
-                                        </a>
-                                    </li>
-                                </li>
+                            </li>
+                            <li class="current">
+                                <a href="#productos">
+                                    <div>Productos</div>
+                                </a>
+                            </li>
+                            <li class="current">
+                                <a href="#contactos">
+                                    <div>Contactenos</div>
+                                </a>
+                            </li>
+                            <li class="current">
+                                <a href="../index.html">
+                                    <img src="../images/language/ES.png" class="language" />
+                                </a>
+                            </li>
                         </ul>
+
 
                     </nav>
                     <!-- #primary-menu end -->
