--- a/public/en/locker-huellas dactilares.html
+++ b/public/en/locker-huellas dactilares.html
@@ -66,22 +66,22 @@
                     <ul>
                         <li class="current">
                             <a href="index.html">
-                                <div>Inicio</div>
+                                <div>Home</div>
                             </a>
                         </li>
                         <li class="current">
                             <a href="nosotros.html">
-                                <div>Quienes somos</div>
+                                <div>How about us</div>
                             </a>
                         </li>
                         <li class="current">
                             <a href="#productos">
-                                <div>Productos</div>
+                                <div>Products</div>
                             </a>
                         </li>
                         <li class="current">
                             <a href="#contactos">
-                                <div>Contactenos</div>
+                                <div>Contanct us</div>
                             </a>
                         </li>
                         <li class="current">
