update text Eng

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -74,7 +74,7 @@
                             </li>
                             <li class="current">
                                 <a href="nosotros.html">
-                                    <div>How about us</div>
+                                    <div>About Us</div>
                                 </a>
                             </li>
                             <li class="current">
@@ -84,7 +84,7 @@
                             </li>
                             <li class="current">
                                 <a href="#contactos">
-                                    <div>Contanct us</div>
+                                    <div>Contact us</div>
                                 </a>
                             </li>
                             <li class="current">
@@ -111,7 +111,7 @@
                     <div class="swiper-slide dark" style="background-image: url('images/slide1.png'); background-position: center top;">
                         <div class="container clearfix">
                             <div class="slider-caption">
-                                <h2 data-caption-animate="fadeInUp">INTELLIGENT AUTONOMOUS LOCKER</h2>
+                                <h2 data-caption-animate="fadeInUp">SMART AUTONOMOUS LOCKER</h2>
                                 <p data-caption-animate="fadeInUp" data-caption-delay="200">Smart biometric control components</p>
                             </div>
                         </div>
@@ -119,7 +119,8 @@
                     <div class="swiper-slide dark" style="background-image: url('images/banner 2.png'); background-position: center top;">
                         <div class="container clearfix">
                             <div class="slider-caption">
-                                <h2 data-caption-animate="fadeInUp">INTELLIGENT PAYMENTS</h2>
+                                <h2 data-caption-animate="fadeInUp"> SMART PAYMENT METHODS
+                                </h2>
                                 <p data-caption-animate="fadeInUp" data-caption-delay="200">Collection system with electronic wallet</p>
                             </div>
                         </div>
@@ -293,17 +294,17 @@
                     <div class="col_three_fifth nobottommargin col_last">
 
                         <div class="heading-block">
-                            <h2>Smart locker with self-set PIN code</h2>
+                            <h2>SMART LOCKER WITH USER- ESTABLISHED PIN CODE</h2>
                         </div>
 
                         <p>Self-configuring password locker stores packages and opens boxes to Through passwords pre-established by users, it can be used with payment and collection systems.</p>
 
                         <div class="col_half nobottommargin">
                             <ul class="iconlist iconlist-color nobottommargin">
-                                <li><i class="icon-caret-right"></i> Contraseña de 6 dígitos </li>
-                                <li><i class="icon-caret-right"></i> Seguridad</li>
-                                <li><i class="icon-caret-right"></i> función de aviso de voz </li>
-                                <li><i class="icon-caret-right"></i> Teclado de metal.</li>
+                                <li><i class="icon-caret-right"></i> 6-digit password </li>
+                                <li><i class="icon-caret-right"></i> Security</li>
+                                <li><i class="icon-caret-right"></i> Voice prompt function </li>
+                                <li><i class="icon-caret-right"></i> Metal Keyboard</li>
                             </ul>
                         </div>
 
@@ -317,7 +318,7 @@
                     <div class="container clearfix">
 
                         <div class="heading-block center">
-                            <h2>OUR LOCKERS OFFER IN ...</h2>
+                            <h2>OUR LOCKER SYSTEMS ARE OFFERED IN :</h2>
 
                         </div>
 
@@ -328,7 +329,7 @@
                                 <div class="fbox-icon">
                                     <a href="#"><i class="icon-heart"></i></a>
                                 </div>
-                                <h3>GYM </h3>
+                                <h3>Gymnasiums </h3>
                             </div>
                         </div>
 
@@ -357,7 +358,7 @@
                                 <div class="fbox-icon">
                                     <a href="#"><i class="icon-car"></i></a>
                                 </div>
-                                <h3>PARKING</h3>
+                                <h3>Parking Spaces</h3>
                             </div>
                         </div>
 
@@ -468,7 +469,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-desc">
-                                    <h3><a href="locker-huellas dactilares.html">Finger Printer</a></h3>
+                                    <h3><a href="locker-huellas dactilares.html">Finger Reader</a></h3>
                                 </div>
                             </div>
                         </div>
