--- a/public/en/locker-codigo-barras.html
+++ b/public/en/locker-codigo-barras.html
@@ -74,7 +74,7 @@
                             </li>
                             <li class="current">
                                 <a href="nosotros.html">
-                                    <div>How about us</div>
+                                    <div>About Us</div>
                                 </a>
                             </li>
                             <li class="current">
@@ -84,7 +84,7 @@
                             </li>
                             <li class="current">
                                 <a href="#contactos">
-                                    <div>Contanct us</div>
+                                    <div>Contact us</div>
                                 </a>
                             </li>
                             <li class="current">
@@ -288,7 +288,7 @@
                                         </div>
                                     </div>
                                     <div class="portfolio-desc">
-                                        <h3><a href="locker-huellas dactilares.html">Finger Printer</a></h3>
+                                        <h3><a href="locker-huellas dactilares.html">Finger Reader</a></h3>
                                     </div>
                                 </div>
                             </div>
