--- a/public/en/locker-pin-establecido.html
+++ b/public/en/locker-pin-establecido.html
@@ -74,7 +74,7 @@
                             </li>
                             <li class="current">
                                 <a href="nosotros.html">
-                                    <div>How about us</div>
+                                    <div>About Us</div>
                                 </a>
                             </li>
                             <li class="current">
@@ -84,7 +84,7 @@
                             </li>
                             <li class="current">
                                 <a href="#contactos">
-                                    <div>Contanct us</div>
+                                    <div>Contact us</div>
                                 </a>
                             </li>
                             <li class="current">
@@ -316,7 +316,7 @@
                                         </div>
                                     </div>
                                     <div class="portfolio-desc">
-                                        <h3><a href="locker-huellas dactilares.html">Finger Printer</a></h3>
+                                        <h3><a href="locker-huellas dactilares.html">Finger Reader/a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -327,12 +327,12 @@
                                         <a href="locker-tarjeta-inteligente.html">
                                             <img src="images/lockers/3.png" alt="Locked Steel Gate">
                                         </a>
-                                        <div class="portfolio-overlay">
-                                            <a href="images/lockers/3.png" class="left-icon" data-lightbox="image"><i
+                                            <div class="portfolio-overlay">
+                                                <a href="images/lockers/3.png" class="left-icon" data-lightbox="image"><i
                                                         class="icon-line-plus"></i></a>
-                                            <a href="locker-tarjeta-inteligente.html" class="right-icon"><i
+                                                <a href="locker-tarjeta-inteligente.html" class="right-icon"><i
                                                         class="icon-line-ellipsis"></i></a>
-                                        </div>
+                                            </div>
                                     </div>
                                     <div class="portfolio-desc">
                                         <h3><a href="locker-tarjeta-inteligente.html">RFID card</a></h3>
