--- a/public/locker-pin-establecido.html
+++ b/public/locker-pin-establecido.html
@@ -315,7 +315,7 @@
                                         </div>
                                     </div>
                                     <div class="portfolio-desc">
-                                        <h3><a href="locker-huellas dactilares.html">Finger Printer</a></h3>
+                                        <h3><a href="locker-huellas dactilares.html">Finger Reader</a></h3>
                                     </div>
                                 </div>
                             </div>
