--- a/public/en/nosotros.html
+++ b/public/en/nosotros.html
@@ -74,7 +74,7 @@
                             </li>
                             <li class="current">
                                 <a href="nosotros.html">
-                                    <div>How about us</div>
+                                    <div>About Us</div>
                                 </a>
                             </li>
                             <li class="current">
@@ -84,7 +84,7 @@
                             </li>
                             <li class="current">
                                 <a href="#contactos">
-                                    <div>Contanct us</div>
+                                    <div>Contact us</div>
                                 </a>
                             </li>
                             <li class="current">
